Fixed overflow for map

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -11,3 +11,7 @@ app-layer-controller {
   bottom: 15%;
   left: 1%;
 }
+
+:host {
+  height: 100%;
+}
