--- a/src/app/shared/components/map-component/map.component.scss
+++ b/src/app/shared/components/map-component/map.component.scss
@@ -1,4 +1,3 @@
 mgl-map {
-  width: 100vw;
   height: 100vh;
 }
