--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,6 @@
 html,
 body {
   height: 100%;
-  overflow: hidden;
 }
 body {
   margin: 0;
